# bigotes

./: CMakeLists.txt  README.md  bigotes.1  bigotes.c  common.c  common.h  dip.c  dip.h  pnorm.c  pnorm.h  qnorm.c  qnorm.h  stats.c  stats.h  swilk.c  swilk.h
